--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,8 @@
 	<meta charset = "UTF-8">
 	<meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
 	<title> FLIGHT FARE PREDICTION </title>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
 
 </head>
@@ -100,7 +102,7 @@
 		body {
             padding: 0px;
             font-family: Arial black, Charcoal, sans-serif;
-            background: url("https://theforetech.com/wp-content/uploads/2020/07/bg1.jpg") no-repeat center fixed; 
+            background: url("https://unsplash.com/photos/rn-NLirHQPY") no-repeat center fixed; 
             background-size: cover;
 		}
 
