--- a/templates/home.html
+++ b/templates/home.html
@@ -5,22 +5,13 @@
 	<meta charset = "UTF-8">
 	<meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
 	<title> FLIGHT FARE PREDICTION </title>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
 
 </head>
 
 
 <body>
-    <!-- As a heading -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="/">FLIGHT PRICE PREDICTION</a>
-            </div>
-        </div>
-    </nav>
+    
 	
     <div style="color:white">
             <h1><center><i>FLIGHT FARE PREDICTION</i></center></h1>
@@ -102,8 +93,9 @@
 		body {
             padding: 0px;
             font-family: Arial black, Charcoal, sans-serif;
-            background: url("https://unsplash.com/photos/rn-NLirHQPY") no-repeat center fixed; 
+            background-image: url("./b1.jpg") no-repeat center fixed; 
             background-size: cover;
+            background-color: darkslategray;
 		}
 
 		#Source {
